# newsroom

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
docs/superpowers/specs/: 2026-07-09-llm-provider-wiring-design.md
src/newsroom/: __init__.py  agents.py  alerts.py  auth.py  cli.py  config.py  llm.py  llm_wire.py  models.py  outputs.py  safety.py  scoring.py  server.py  store.py  workflow.py
src/newsroom/classifiers/: __init__.py  active_attack.py  base.py  breach_impact.py  confidence.py  llm_active_attack.py  vulnerability.py
src/newsroom/ingest/: __init__.py  kev.py  rss.py
src/newsroom/web/: app.css  app.js  index.html
tests/: conftest.py  test_agent_safety.py  test_api.py  test_auth.py  test_cli.py  test_config.py  test_ingest.py  test_injection_defense.py  test_kev.py  test_llm_active_attack.py  test_llm_providers.py  test_llm_wire.py  test_scoring.py  test_store.py  test_watch.py  test_workflow.py
tests/fixtures/: kev_sample.json  rss_prompt_injection.xml  rss_sample.xml
