[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "newsroom"
version = "0.1.0"
description = "Cyber news ingestion, expert classification, and threat alerting workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "feedparser>=6.0",
    "httpx>=0.27",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
newsroom = "newsroom.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
newsroom = ["web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
